@@ -17,3 +17,4 @@
 - Eliminación de plantillas de /files/templates y /templates dentro del war
 - Añadido bgcolorcontainer a los parámetros de mapas para aplicar un color al fondo del html del mapa de OpenLayers.
 - Se elimina la clase ParametersAdapterV3ToV4 de api-idee-rest.
+- Se eliminan métodos get/set type de las capas OSM, MapLibre y GeoTIFF.
